# camp

./: .editorconfig  .env.local  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  Procfile  Procfile.windows  README.md  TODO.md  app.json  bandit.yaml  docker-compose.yml  heroku.yml  pyproject.toml  pytest.ini  requirements.txt
.circleci/: config.yml
.github/workflows/: django-tests.yaml
accounts/: adapter.py  urls.py  views.py
accounts/templates/account/: profile_detail.html
camp/: context.py
camp/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
camp/accounts/migrations/: 0001_initial.py  0002_remove_membership_nickname_membership_birthdate_and_more.py  0003_alter_membership_joined.py  0003_remove_membership_joined.py  0004_remove_membership_joined.py
camp/accounts/templatetags/: accounts.py
camp/character/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
camp/character/migrations/: 0001_initial.py  0002_remove_character_chapter.py  0003_character_game.py  0004_undostackentry.py  0005_character_campaign.py  0006_character_discarded_by_character_discarded_date.py  0007_alter_character_discarded_by_and_more.py
camp/character/templatetags/: character_sheet.py
camp/engine/: loader.py  utils.py
camp/engine/rules/: base_engine.py  base_models.py  decision.py
camp/events/: admin.py  apps.py  models.py
camp/events/migrations/: 0001_initial.py  0002_alter_event_logistics_month.py  0003_alter_event_details_template_and_more.py  0004_event_canceled_date.py  0005_alter_eventregistration_unique_together_and_more.py
camp/game/: admin.py  apps.py  fields.py  forms.py  management.py  models.py  remote_loader.py  rules.py  tasks.py  test_models.py  test_views.py  tests.py  urls.py  views.py
camp/game/migrations/: 0001_initial.py  0002_game_owners_alter_game_description_chapter_gamerole_and_more.py  0002_remove_game_site_game_name.py  0003_alter_game_name.py  0004_ruleset.py  0005_alter_chapter_unique_together_ruleset_enabled_and_more.py  0006_campaign.py  0007_chapter_timezone.py  0017_event_type.py  (+28 more)
camp/tempest/: __init__.py
config/: celery.py  hosts.py  settings.py  urls.py
context/: base.py
docs/: getting-started-non-docker.md  getting-started.md
game/: models.py  views.py
pages/: apps.py  views.py
pages/templates/: 404.html  500.html  base.html
static/css/: base.css
templates/: 403.html  404.html  500.html  base.html
templates/account/: base.html
templates/flatpages/: default.html
templates/snippets/: messages.html
tests/camp/: conftest.py
(+2880 files in other folders)
