[tool.poetry]
name = "camp"
version = "0.1.0"
description = ""
authors = ["Ken Moriarty <kwatford@gmail.com>"]
readme = "README.md"
packages = [{include = "camp"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true

[tool.poetry.dependencies]
python = "^3.10.0"
crispy-bootstrap5 = "==0.6"
django = "~=4.1"
django-allauth = "==0.50.0"
django-crispy-forms = "==1.14.0"
django-debug-toolbar = "==3.2.4"
whitenoise = "==6.0.0"
environs = {extras = ["django"], version = "==9.5.0"}
gunicorn = "==20.1.0"
rules = "==3.3"
pydantic = ">=1.10,<2.0"

[tool.poetry.group.dev.dependencies]
ipython = "~=8.2"
pre-commit = "*"
pytest = "^7.1"
pytest-django = "==4.5.2"

[tool.poetry.group.postgres]
optional = true

[tool.poetry.group.postgres.dependencies]
psycopg2-binary = "^2.9"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'config.settings'
python_files = ["tests.py", "test_*.py", "*_tests.py", "*_test.py"]
testpaths = ["tests"]
